--- a/views/home.html
+++ b/views/home.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
-    <h5>Prueba</h5>
+
+    <header class="headerPrincipal">
+
+        <div class="LogoPrincipal">
+            <img src="./desing/logo.png">
+        </div>
+        <div class="conteiner">
+            <h1>LA PIZZA QUE TE GUSTA</h1>
+        </div>
+
+        <nav class="opcionPrincipal">
+            <ul>
+                <li><a href="">Inicio</a></li>
+                <li><a href="">Menu</a></li>
+                <li><a href="">Sucursales</a></li>
+                <li><a href="">Registrate</a></li>
+            </ul>
+        </nav>
+
+    </header>
+
+
+    <main>
+
+    </main>
+
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
