--- a/views/register.html
+++ b/views/register.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-<h1>lalalal</h1>
+    <header>
+        <h2> VOID </h2>
+    </header>
+
+
+    <main>
+
+        <h2>area a trabajar</h2>
+
+
+    </main>
+
+
+    <footer>
+
+        <h2>VOID </h2>
+
+    </footer>
+    
 </body>
+
 </html>
