Se agregan Hipervinculos

--- a/views/home.html
+++ b/views/home.html
@@ -22,10 +22,10 @@
 
         <nav class="opcionPrincipal">
             <ul>
-                <li><a href="">Inicio</a></li>
-                <li><a href="">Menu</a></li>
+                <li><a href="home">Inicio</a></li>
+                <li><a href="producto">Menu</a></li>
                 <li><a href="">Sucursales</a></li>
-                <li><a href="">Registrate</a></li>
+                <li><a href="login">Registrate</a></li>
             </ul>
         </nav>
 
