--- a/views/home.html
+++ b/views/home.html
@@ -17,7 +17,7 @@
             <img src="./desing/logo.png">
         </div>
         <div class="conteiner">
-            <h1>LA PIZZA QUE TE GUSTA</h1>
+            <h5>LA PIZZA QUE TE GUSTA</h5>
         </div>
 
         <nav class="opcionPrincipal">
@@ -34,10 +34,25 @@
 
     <main>
 
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </main>
 
 
-    <footer>
+    <footer class="footer"> 
+
+        <nav class="info-footer">
+
+            <ul>
+                <li><a href="">Direccion</a></li>
+                <li><a href="">Av. Cabildo (caba)</a></li>
+                <li><a href="">Sobre Nosotros</a></li>
+                <li><a href="">Copyright Todos los derechos reservados Desarrollado por G10</a></li>
+                <li><a href="">Nuestras Redes</a></li>
+                <li><a href="">Aca agregar Iconos</a></li>
+
+            </ul>
+
+        </nav>
 
     </footer>
 </body>
