--- a/views/producto.html
+++ b/views/producto.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header>
-        <h2> VOID </h2>
+        <div class="LogoPrincipal">
+            <img src="./desing/logo.png">
+        </div>
+        <div class="conteiner">
+            <h5>LA PIZZA QUE TE GUSTA</h5>
+        </div>
+
+        <nav class="opcionPrincipal">
+            <ul>
+                <li><a href="home">Inicio</a></li>
+                <li><a href="producto">Menu</a></li>
+                <li><a href="">Sucursales</a></li>
+                <li><a href="login">Registrate</a></li>
+            </ul>
+        </nav>
     </header>
 
 
@@ -21,8 +37,22 @@
 
     <footer>
 
-        <h2>VOID </h2>
+        <nav class="info-footer">
+
+            <ul>
+                <li><a href="">Direccion</a></li>
+                <li><a href="">Av. Cabildo (caba)</a></li>
+                <li><a href="">Sobre Nosotros</a></li>
+                <li><a href="">Copyright Todos los derechos reservados Desarrollado por G10</a></li>
+                <li><a href="">Nuestras Redes</a></li>
+                <li><a href="">Aca agregar Iconos</a></li>
+
+            </ul>
+
+        </nav>
+
 
     </footer>
 </body>
+
 </html>
