Se agregan colores a General.css

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -4,6 +4,14 @@
     --rojo: #A60D0D;    
     --gris: #D9D9D9;
     --gri: #364F5E;
+    --azul: #5F9FFE;
+    --negro:#000000;
+    --negrocla:#323030;
+    --verde: #36CF58;
+    --grisBoton: #D9D9D9;
+    --blanco:#FFFFFF;
+    
+
     
 
 
