--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,10 +1,8 @@
 /*Celular*/
 @media screen and (max-width: 360px) {
 .headerPrincipal{
-
-background: var(--rojo);
-
-height: 110px;
+background: var(--rojo);
+height: 128px;
 }
 
 .headerPrincipal div.logoPrincipal {
@@ -12,21 +10,16 @@ height: 110px;
 }
 
 .headerPrincipal img{
-
-height: 25px;
+height: 61px;
 }
 
-.headerPrincipal div.conteiner{display: flex;flex-direction: row-reverse;}
+.headerPrincipal div.conteiner{display: flex;flex-direction: column-reverse;}
 
 .headerPrincipal h5{
-
-text-align: center;
-
-font-family: var(--frijole);
-
-color: var(--gris);
-
-/* font-size: smaller; */
+text-align: center;
+font-family: var(--frijole);
+color: var(--gris);
+/* font-size: smaller; */
 }
 
 .headerPrincipal nav.opcionPrincipal{
