Edité el package.json

--- a/views/carrito.html
+++ b/views/carrito.html
@@ -14,7 +14,14 @@
 
     <main>
 
-        <h2>area a trabajar</h2>
+        <ul>
+            <li><a href="">Clásicas</a></li>
+            <li><a href="">Pizzas del mes</a></li>
+            <li><a href="">Promo del mes</a></li>
+            <li><a href="">Combos</a></li>
+            <li><a href="">Individuales</a></li>
+            <li><a href="">Bebidas</a></li>
+        </ul>
 
 
     </main>
