--- a/views/ProductDetail.html
+++ b/views/ProductDetail.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Producto</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -27,10 +29,31 @@
     </header>
 
 
-    <main>
+    <main class="main-producto">
 
-        <h2>area a trabajar</h2>
+        <div class="article">
 
+            <article class="articulo-producto">
+
+                <img src="\images\producto\pizza.png" alt="Imagen de pizza">
+
+                <h3>Caprese 8 Pociones</h3>
+
+                <p>Muzzarrella - Tomates Frescos - Albahaca - Aceite de Albahaca</p>
+
+                <P>Subtotal</P>
+
+                <p>$7200</p>
+
+            </article>
+
+        </div>
+
+        <div class="Confirmacion">
+
+            <h3>Agregar</h3>
+
+        </div>
 
     </main>
 
