--- a/views/home.html
+++ b/views/home.html
@@ -23,7 +23,7 @@
         <nav class="opcionPrincipal">
             <ul>
                 <li><a href="home">Inicio</a></li>
-                <li><a href="producto">Menu</a></li>
+                <li><a href="product">Menu</a></li>
                 <li><a href="">Sucursales</a></li>
                 <li><a href="login">Registrate</a></li>
             </ul>
@@ -32,9 +32,9 @@
     </header>
 
 
-    <main>
+    
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br>
     </main>
 
 
