Se realiza cambio en el footer y header HTML

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -33,6 +33,9 @@
 *{
     font-family: var(--Frijole);
     margin: 0px;
+    color: var(--negro);
+    font-size: 17px;
+    /* display: flex; */
 }
 body{
     margin: auto;
