--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,77 +1,91 @@
 /*Celular*/
 @media screen and (max-width: 360px) {
-.footer{
+
+    .footer {
 
 background: var(--rojo);
 
-height: 198px;
+height: 233px;
+
+display: flex;
+
+flex-direction: column;
+
+justify-content: center;
+
+align-items: center;
+
 }
 
-.footer .info-footer{
+    .footer .info-footer {}
 
+    .footer .info-footer ul {}
+
+    .footer .info-footer .conteiner-phone {
+    display: flex;
+    justify-content: center;
 }
 
-.footer .info-footer ul{
-
+    .conteiner-phone i {
+    display: flex;
+    justify-content: center;
+    font-size: 41px;
 }
 
-.footer .info-footer ul li{
-    
+    .direction-f {display: none;}
+
+    .conteiner-location {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 22px;
 }
 
-.footer .info-footer ul li a{
-    
-}
+    .conteiner-location i {}
+
+    .conteiner-location h3 {
+    display: flex;
+    display: inline-block;
 }
 
-/*Tablet*/
-@media screen and (min-width: 361px) {
-    .footer{
-    
-    background: var(--rojo);
-    
-    height: 198px;
-    }
-    
-    .footer .info-footer{
-    
-    }
-    
-    .footer .info-footer ul{
-    
-    }
-    
-    .footer .info-footer ul li{
+    .conteiner-location h2 {}
+
+    .Redes {
+    display: none;
+}
+
+    .conteiner-iconos {
+    padding-bottom: 71px;
+}
+
+    .conteiner-iconos a {}
+
+    .conteiner-iconos a .face {}
+
+    .conteiner-iconos a .insta {}
+
+    .conteiner-iconos a .pint {}
+
+    .conteiner-iconos a .yutub {}
+
+    .conteiner-iconos a .whats {}
+
+
+    .contenedor-copy h2 {
+    display: none;
+}
+
+    .contenedor-copy p {
+    display: flex;
+    font-size: 10px;
+    margin-left: -40px;
+}
+
+
+
+    /*Tablet*/
+    @media screen and (min-width: 361px) {}
+      
+
+    /*Laptop*/
+    @media screen and (min-width: 769px) {}
         
-    }
-    
-    .footer .info-footer ul li a{
-        
-    }
-    }
-    
-/*Laptop*/
-@media screen and (min-width: 769px) {
-    .footer{
-    
-    background: var(--rojo);
-    
-    height: 198px;
-    }
-    
-    .footer .info-footer{
-    
-    }
-    
-    .footer .info-footer ul{
-    
-    }
-    
-    .footer .info-footer ul li{
-        
-    }
-    
-    .footer .info-footer ul li a{
-        
-    }
-    }
