--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,5 +1,6 @@
 :root {
     --frijole: 'Frijole', sans-serif;
+    --antiqua:  
 
     --rojo: #A60D0D;    
     --gris: #D9D9D9;
@@ -10,6 +11,7 @@
     --verde: #36CF58;
     --grisBoton: #D9D9D9;
     --blanco:#FFFFFF;
+    --rojo: #A60D0D;
     
 
     
