--- a/views/ProductDetail.html
+++ b/views/ProductDetail.html
@@ -10,22 +10,25 @@
 </head>
 
 <body>
-    <header>
-        <div class="LogoPrincipal">
-            <img src="./desing/logo.png">
-        </div>
-        <div class="conteiner">
-            <h5>LA PIZZA QUE TE GUSTA</h5>
+    <header class="headerPrincipal">
+
+        <a href="/"> <img src="./desing/logo.png" alt="logo pizza"></a>
+        <h5>LA PIZZA QUE TE GUSTA</h5>
+        <div class="burger-menu">
+            <i class="fas fa-bars"></i>
         </div>
 
         <nav class="opcionPrincipal">
             <ul>
-                <li><a href="home">Inicio</a></li>
-                <li><a href="producto">Menu</a></li>
+                <li><a href="">Inicio</a></li>
+                <li><a href="">Menu</a></li>
                 <li><a href="">Sucursales</a></li>
-                <li><a href="login">Registrate</a></li>
+                <li><a href="">Registrate</a></li>
             </ul>
         </nav>
+
+
+
     </header>
 
 
@@ -58,17 +61,38 @@
     </main>
 
 
-    <footer>
+    <footer class="footer">
 
         <nav class="info-footer">
 
             <ul>
-                <li><a href="">Direccion</a></li>
-                <li><a href="">Av. Cabildo (caba)</a></li>
-                <li><a href="">Sobre Nosotros</a></li>
-                <li><a href="">Copyright Todos los derechos reservados Desarrollado por G10</a></li>
-                <li><a href="">Nuestras Redes</a></li>
-                <li><a href="">Aca agregar Iconos</a></li>
+
+                    <div class="conteiner-phone">
+                        <i class="fa-solid fa-phone"></i> <a href="tel">+54 9 388 4636451</a>
+                    </div>
+
+                    <h2 class="direction-f">Direccion</h2>
+
+                    <div class="conteiner-location">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <h3>AV. Cabildo 230 (c.a.b.a)</h3>
+                    </div>
+
+                    <h2 class="Redes">Nuestras Redes</h2>
+
+                    <div class="conteiner-iconos">
+                        <a href=""><i class="fa-brands fa-facebook face"></i></a>
+                        <a href=""><i class="fa-brands fa-instagram insta"></i></a>
+                        <a href=""><i class="fa-brands fa-square-pinterest pint"></i></a>
+                        <a href=""><i class="fa-brands fa-youtube yutub"></i></a>
+                        <a href=""><i class="fa-brands fa-square-whatsapp whats"></i></a>
+
+                    </div>
+
+                    <div class="contenedor-copy">
+                        <h2 class="sobre-nos">Sobre Nosotros</h2>
+                        <p>copyrigth 2023 |Todos los Derechos Reservados |Desarrollado por grupo 10</p>
+                    </div>
 
             </ul>
 
