--- a/views/home.html
+++ b/views/home.html
@@ -44,32 +44,35 @@
 
             <ul>
 
-                    <div class="conteiner-phone">
-                        <i class="fa-solid fa-phone"></i> <a href="tel">+54 9 388 4636451</a>
-                    </div>
+                <div class="conteiner-phone">
+                    <i class="fa-solid fa-phone"></i>
+                    <a href="tel">+54 9 388 4636451</a>
+                </div>
 
-                    <h2 class="direction-f">Direccion</h2>
+                <h2 class="direction-f">Direccion</h2>
 
-                    <div class="conteiner-location">
-                        <i class="fa-solid fa-location-dot"></i>
-                        <h3>AV. Cabildo 230 (c.a.b.a)</h3>
-                    </div>
+                <div class="conteiner-location">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <h3>AV. Cabildo 230 (c.a.b.a)</h3>
+                </div>
 
-                    <h2 class="Redes">Nuestras Redes</h2>
+                <h2 class="Redes">Nuestras Redes</h2>
 
-                    <div class="conteiner-iconos">
-                        <a href=""><i class="fa-brands fa-facebook face"></i></a>
-                        <a href=""><i class="fa-brands fa-instagram insta"></i></a>
-                        <a href=""><i class="fa-brands fa-square-pinterest pint"></i></a>
-                        <a href=""><i class="fa-brands fa-youtube yutub"></i></a>
-                        <a href=""><i class="fa-brands fa-square-whatsapp whats"></i></a>
+                <div class="conteiner-iconos">
+                    <a href="http://www.facebook.com.ar"><img src="/desing/icons/face.png" alt="Facebook"></a>
+                    <a href="http://www.instagram.com.ar"><img src="/desing/icons/insta.png" alt="Instagram"></a>
+                    <a href="http://www.pinteres.com.ar"><img src="/desing/icons/pint.png" alt="Pinteres"></a>
+                    <a href="http://www.youtube.com.ar"><img src="/desing/icons/youtu.png" alt="Youtube"></a>
+                    <a href="http://www.whatsapp.com.ar"><img src="/desing/icons/what.png" alt="whatsapp"></a>
 
-                    </div>
 
-                    <div class="contenedor-copy">
-                        <h2 class="sobre-nos">Sobre Nosotros</h2>
-                        <p>copyrigth 2023 |Todos los Derechos Reservados |Desarrollado por grupo 10</p>
-                    </div>
+
+                </div>
+
+                <div class="contenedor-copy">
+                    <h2 class="sobre-nos">Sobre Nosotros</h2>
+                    <p>copyrigth 2023 |Todos los Derechos Reservados |Desarrollado por grupo 10</p>
+                </div>
 
             </ul>
 
