--- a/views/home.html
+++ b/views/home.html
@@ -22,10 +22,10 @@
 
         <nav class="opcionPrincipal">
             <ul>
-                <li><a href="">Inicio</a></li>
-                <li><a href="">Menu</a></li>
-                <li><a href="">Sucursales</a></li>
-                <li><a href="">Registrate</a></li>
+                <li class="opcion" ><a href="">Inicio</a></li>
+                <li class="opcion1" ><a href="">Menu</a></li>
+                <li class="opcion2" ><a href="">Sucursales</a></li>
+                <li class="opcion3" ><a href="">Registrate</a></li>
             </ul>
         </nav>
 
@@ -33,8 +33,8 @@
 
     </header>
 
-
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <main>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </main>
 
 
