--- a/public/css/header.css
+++ b/public/css/header.css
@@ -14,9 +14,12 @@
     }
 
     .headerPrincipal img {
-height: 77px;
-padding-top: 7px;
-}
+
+        height: 77px;
+
+        padding-top: 7px;
+
+    }
 
     .headerPrincipal div.conteiner {
         display: flex;
@@ -65,59 +68,86 @@
 
 /*Tablet*/
 @media screen and (min-width: 361px) {
+
     .headerPrincipal {
+    background: var(--rojo);
+    height: 124px;
+    position: relative;
+}
 
-        background: var(--rojo);
+    .headerPrincipal img {height: 100px;/* border: solid; */padding-top: 7px;}
 
-        height: 198px;
-    }
+    .headerPrincipal div.conteiner {}
 
-    .headerPrincipal div.logoPrincipal {}
+    .headerPrincipal h5 {
+    display: none;
+}
 
-    .headerPrincipal img {
+    .headerPrincipal .burger-menu {
+    display: none;
+}
 
-        height: 100px;
-    }
+    .headerPrincipal .burger-menu i {}
 
-    .headerPrincipal div.conteiner {
-        display: flex;
-        flex-direction: row-reverse;
-    }
-
-    .headerPrincipal h1 {
-
-        text-align: center;
-
-        font-family: var(--frijole);
-
-        color: var(--gris);
-
-        font-size: -webkit-xxx-large;
-    }
 
     .headerPrincipal nav.opcionPrincipal {}
 
-    .headerPrincipal .opcionPrincipal ul {}
+    .headerPrincipal .opcionPrincipal ul {display: flex;flex-direction: row;position: absolute;top: 46px;/* text-decoration: none; */list-style: none;}
 
-    .headerPrincipal .opcionPrincipal ul li {}
-
-    .headerPrincipal .opcionPrincipal ul li a {}
+    .headerPrincipal .opcionPrincipal ul li {
+    margin-left: 100px;
+    border: solid 2px var(--gris);
+    border-radius: 14px;
+    padding: 3px;
 }
+
+    .headerPrincipal .opcionPrincipal ul li a {
+    padding: 1px;
+    color: var(--gris);
+}
+
+
+.headerPrincipal .opcionPrincipal .opcion{
+padding: 9px;
+}
+
+.headerPrincipal .opcionPrincipal .opcion1{
+    padding: 9px;
+}
+
+.headerPrincipal .opcionPrincipal .opcion2{
+    
+}
+
+.headerPrincipal .opcionPrincipal .opcion3{
+    
+}
+
+}
+
+
 
 /*laptop*/
 @media screen and (min-width: 769px) {
+
     .headerPrincipal {
 
-        background: var(--rojo);
+        height: 93px;
 
-        height: 198px;
+        display: flex;
+
+        justify-content: space-around;
+
+        background-color: var(--rojo);
+
     }
-
-    .headerPrincipal div.logoPrincipal {}
 
     .headerPrincipal img {
 
-        height: 100px;
+        height: 77px;
+
+        padding-top: 7px;
+
     }
 
     .headerPrincipal div.conteiner {
@@ -125,7 +155,7 @@
         flex-direction: row-reverse;
     }
 
-    .headerPrincipal h1 {
+    .headerPrincipal h5 {
 
         text-align: center;
 
@@ -133,14 +163,34 @@
 
         color: var(--gris);
 
-        font-size: -webkit-xxx-large;
+        font-size: medium;
+
+        display: none;
+
+        width: 68px;
     }
 
-    .headerPrincipal nav.opcionPrincipal {}
+    .headerPrincipal .burger-menu {
+        /* border: solid; */
+        margin-left: 31%;
+        padding-top: 17px;
+    }
+
+    .headerPrincipal .burger-menu i {
+        font-size: 50px;
+        margin-right: 32px;
+    }
+
+
+    .headerPrincipal nav.opcionPrincipal {
+
+        display: none;
+    }
 
     .headerPrincipal .opcionPrincipal ul {}
 
     .headerPrincipal .opcionPrincipal ul li {}
 
     .headerPrincipal .opcionPrincipal ul li a {}
+
 }
