--- a/views/home.html
+++ b/views/home.html
@@ -23,7 +23,7 @@
         <nav class="opcionPrincipal">
             <ul>
                 <li class="opcion" ><a href="">Inicio</a></li>
-                <li class="opcion1" ><a href="">Menu</a></li>
+                <li class="/cart.html" ><a href="">Menu</a></li>
                 <li class="opcion2" ><a href="">Sucursales</a></li>
                 <li class="opcion3" ><a href="">Registrate</a></li>
             </ul>
