--- a/views/productCart.html
+++ b/views/productCart.html
@@ -9,13 +9,31 @@
 </head>
 <body>
 
-    <header>
-        <h2> VOID </h2>
+   
+    <header class="headerPrincipal">
+
+        <a href="/"> <img src="./desing/logo.png" alt="logo pizza"></a>
+        <h5>LA PIZZA QUE TE GUSTA</h5>
+        <div class="burger-menu">
+            <i class="fas fa-bars"></i>
+        </div>
+
+        <nav class="opcionPrincipal">
+            <ul>
+                <li class="opcion" ><a href="">Inicio</a></li>
+                <li class="/cart.html" ><a href="">Menu</a></li>
+                <li class="opcion2" ><a href="">Sucursales</a></li>
+                <li class="opcion3" ><a href="">Registrate</a></li>
+            </ul>
+        </nav>
+
+
+
     </header>
 
 
     <main>
-
+   <nav>
         <ul>
             <li><a href="">Clásicas</a></li>
             <li><a href="">Pizzas del mes</a></li>
@@ -24,14 +42,67 @@
             <li><a href="">Individuales</a></li>
             <li><a href="">Bebidas</a></li>
         </ul>
-
+  </nav>
+  <h2>Clásicas</h2>
+  <p>Clásicas</p>
+  <div>
+    <img src="/desing/imgCarrito/image2.jpg" alt="">
+<p>Pepperoni 8P</p>
+<p>Salsa de tomate, pepperoni, mozzarella, aceituna sin carozo.</p>
+<p>$5,400,0</p>
+  </div>
+  <div>
+    <img src="/desing/imgCarrito/image2.jpg" alt="">
+    <p></p>
+  </div>
+  <div>
+    <img src="/desing/imgCarrito/image2.jpg" alt="">
+    <p></p>
+  </div>
+        
 
     </main>
 
 
-    <footer>
+    <footer class="footer">
 
-        <h2>VOID </h2>
+        <nav class="info-footer">
+
+            <ul>
+
+                <div class="conteiner-phone">
+                    <i class="fa-solid fa-phone"></i>
+                    <a href="tel">+54 9 388 4636451</a>
+                </div>
+
+                <h2 class="direction-f">Direccion</h2>
+
+                <div class="conteiner-location">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <h3>AV. Cabildo 230 (c.a.b.a)</h3>
+                </div>
+
+                <h2 class="Redes">Nuestras Redes</h2>
+
+                <div class="conteiner-iconos">
+                    <a href="http://www.facebook.com.ar"><img src="/desing/icons/face.png" alt="Facebook"></a>
+                    <a href="http://www.instagram.com.ar"><img src="/desing/icons/insta.png" alt="Instagram"></a>
+                    <a href="http://www.pinteres.com.ar"><img src="/desing/icons/pint.png" alt="Pinteres"></a>
+                    <a href="http://www.youtube.com.ar"><img src="/desing/icons/youtu.png" alt="Youtube"></a>
+                    <a href="http://www.whatsapp.com.ar"><img src="/desing/icons/what.png" alt="whatsapp"></a>
+
+
+
+                </div>
+
+                <div class="contenedor-copy">
+                    <h2 class="sobre-nos">Sobre Nosotros</h2>
+                    <p>copyrigth 2023 |Todos los Derechos Reservados |Desarrollado por grupo 10</p>
+                </div>
+
+            </ul>
+
+        </nav>
 
     </footer>
     
