Agregué los colores que faltaban: color de fondo de registro y login y color de los input

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -31,6 +31,8 @@
     --login-facebook: #152086;
     --login-ig: #0B6909;
     --login-wp: #333560;
+    --registro-bar: #364F5D;
+    --background-reg: #DFCEB6;
 
 }
 
