--- a/views/productCart.html
+++ b/views/productCart.html
@@ -46,13 +46,13 @@
   <h2>Clásicas</h2>
   <p>Clásicas</p>
   <div>
-    <img src="/desing/imgCarrito/image2.jpg" alt="">
+    <img src="/desing/imgCarrito/image 2.jpg" alt="">
 <p>Pepperoni 8P</p>
 <p>Salsa de tomate, pepperoni, mozzarella, aceituna sin carozo.</p>
 <p>$5,400,0</p>
   </div>
   <div>
-    <img src="/desing/imgCarrito/image2.jpg" alt="">
+    <img src="/desing/imgCarrito/image 2.jpg" alt="">
     <p></p>
   </div>
   <div>
