Carpeta design renombrada y modificado los links de imágenes

--- a/views/productCart.html
+++ b/views/productCart.html
@@ -46,17 +46,17 @@
   <h2>Clásicas</h2>
   <p>Clásicas</p>
   <div>
-    <img src="/desing/imgCarrito/image 2.jpg" alt="">
+    <img src="/design/imgCarrito/image2.jpg" alt="">
 <p>Pepperoni 8P</p>
 <p>Salsa de tomate, pepperoni, mozzarella, aceituna sin carozo.</p>
 <p>$5,400,0</p>
   </div>
   <div>
-    <img src="/desing/imgCarrito/image 2.jpg" alt="">
+    <img src="/design/imgCarrito/image2.jpg" alt="">
     <p></p>
   </div>
   <div>
-    <img src="/desing/imgCarrito/image2.jpg" alt="">
+    <img src="/design/imgCarrito/image2.jpg" alt="">
     <p></p>
   </div>
         
@@ -85,11 +85,11 @@
                 <h2 class="Redes">Nuestras Redes</h2>
 
                 <div class="conteiner-iconos">
-                    <a href="http://www.facebook.com.ar"><img src="/desing/icons/face.png" alt="Facebook"></a>
-                    <a href="http://www.instagram.com.ar"><img src="/desing/icons/insta.png" alt="Instagram"></a>
-                    <a href="http://www.pinteres.com.ar"><img src="/desing/icons/pint.png" alt="Pinteres"></a>
-                    <a href="http://www.youtube.com.ar"><img src="/desing/icons/youtu.png" alt="Youtube"></a>
-                    <a href="http://www.whatsapp.com.ar"><img src="/desing/icons/what.png" alt="whatsapp"></a>
+                    <a href="http://www.facebook.com.ar"><img src="/design/icons/face.png" alt="Facebook"></a>
+                    <a href="http://www.instagram.com.ar"><img src="/design/icons/insta.png" alt="Instagram"></a>
+                    <a href="http://www.pinteres.com.ar"><img src="/design/icons/pint.png" alt="Pinteres"></a>
+                    <a href="http://www.youtube.com.ar"><img src="/design/icons/youtu.png" alt="Youtube"></a>
+                    <a href="http://www.whatsapp.com.ar"><img src="/design/icons/what.png" alt="whatsapp"></a>
 
 
 
