Modifiqué los links de las imágenes, la palabra design, tenía un error

--- a/views/ProductDetail.html
+++ b/views/ProductDetail.html
@@ -12,7 +12,7 @@
 <body>
     <header class="headerPrincipal">
 
-        <a href="/"> <img src="./desing/logo.png" alt="logo pizza"></a>
+        <a href="/"> <img src="./design/logo.png" alt="logo pizza"></a>
         <h5>LA PIZZA QUE TE GUSTA</h5>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
