--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
     <header class="headerPrincipal">
 
         
-        <a href="/"> <img src="./desing/logo.png" alt="logo pizza"></a>
+        <a href="/"> <img src="./design/logo.png" alt="logo pizza"></a>
         <h5>LA PIZZA QUE TE GUSTA</h5>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
@@ -60,11 +60,11 @@
                 <h2 class="Redes">Nuestras Redes</h2>
 
                 <div class="conteiner-iconos">
-                    <a href="http://www.facebook.com.ar"><img src="/desing/icons/face.png" alt="Facebook"></a>
-                    <a href="http://www.instagram.com.ar"><img src="/desing/icons/insta.png" alt="Instagram"></a>
-                    <a href="http://www.pinteres.com.ar"><img src="/desing/icons/pint.png" alt="Pinteres"></a>
-                    <a href="http://www.youtube.com.ar"><img src="/desing/icons/youtu.png" alt="Youtube"></a>
-                    <a href="http://www.whatsapp.com.ar"><img src="/desing/icons/what.png" alt="whatsapp"></a>
+                    <a href="http://www.facebook.com.ar"><img src="/design/icons/face.png" alt="Facebook"></a>
+                    <a href="http://www.instagram.com.ar"><img src="/design/icons/insta.png" alt="Instagram"></a>
+                    <a href="http://www.pinteres.com.ar"><img src="/design/icons/pint.png" alt="Pinteres"></a>
+                    <a href="http://www.youtube.com.ar"><img src="/design/icons/youtu.png" alt="Youtube"></a>
+                    <a href="http://www.whatsapp.com.ar"><img src="/design/icons/what.png" alt="whatsapp"></a>
 
 
 
