--- a/views/productCart.html
+++ b/views/productCart.html
@@ -6,13 +6,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
    
     <header class="headerPrincipal">
 
-        <a href="/"> <img src="./desing/logo.png" alt="logo pizza"></a>
+        <a href="/"> <img src="./design/logo.png" alt="logo pizza"></a>
         <h5>LA PIZZA QUE TE GUSTA</h5>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
@@ -33,8 +34,8 @@
 
 
     <main>
-   <nav>
-        <ul>
+   <nav class="nav-bar">
+        <ul class="list-bar">
             <li><a href="">Clásicas</a></li>
             <li><a href="">Pizzas del mes</a></li>
             <li><a href="">Promo del mes</a></li>
@@ -44,7 +45,7 @@
         </ul>
   </nav>
   <h2>Clásicas</h2>
-  <p>Clásicas</p>
+  <p class="">Clásicas</p>
   <div>
     <img src="/design/imgCarrito/image2.jpg" alt="">
 <p>Pepperoni 8P</p>
@@ -52,14 +53,25 @@
 <p>$5,400,0</p>
   </div>
   <div>
-    <img src="/design/imgCarrito/image2.jpg" alt="">
-    <p></p>
+    <img src="/design/imgCarrito/image3.jpg" alt="">
+    <p>Margarita 6P</p>
+    <p>Salsa de tomates maduros, mozzarella, hojas frescas de albahaca.</p>
+    <p>$4,900,0</p>
   </div>
   <div>
-    <img src="/design/imgCarrito/image2.jpg" alt="">
-    <p></p>
+    <img src="/design/imgCarrito/image4.jpg" alt="">
+    <p>Serranita 6P</p>
+    <p>Salsa de tomate y pimiento asado, rúcula, mozzarella, jamón serrano.</p>
+    <p>$5,899,0</p>
+    
   </div>
-        
+  <div>
+    <i class="fa-solid fa-arrow-left"></i>
+    <p>Salir</p>
+    <i class="fa-solid fa-basket-shopping"></i>
+    <p>Mi pedido</p>
+  </div>
+           
 
     </main>
 
