--- a/views/ProductDetail.html
+++ b/views/ProductDetail.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Producto</title>
+    <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
+
+
     <header class="headerPrincipal">
 
-        <a href="/"> <img src="./design/logo.png" alt="logo pizza"></a>
+        
+        <a href="/"> <img src="./design/icons/logo.png" alt="logo pizza"></a>
         <h5>LA PIZZA QUE TE GUSTA</h5>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
@@ -20,10 +23,10 @@
 
         <nav class="opcionPrincipal">
             <ul>
-                <li><a href="">Inicio</a></li>
-                <li><a href="">Menu</a></li>
-                <li><a href="">Sucursales</a></li>
-                <li><a href="">Registrate</a></li>
+                <li class="opcion" ><a href="">Inicio</a></li>
+                <li class="opcion1" ><a href="">Menu</a></li>
+                <li class="opcion2" ><a href="">Sucursales</a></li>
+                <li class="opcion3" ><a href="">Registrate</a></li>
             </ul>
         </nav>
 
@@ -31,32 +34,37 @@
 
     </header>
 
+    <main>
+        
 
-    <main class="main-producto">
 
-        <div class="article">
+        <main class="main-producto">
 
-            <article class="articulo-producto">
-
-                <img src="\images\producto\pizza.png" alt="Imagen de pizza">
-
-                <h3>Caprese 8 Pociones</h3>
-
-                <p>Muzzarrella - Tomates Frescos - Albahaca - Aceite de Albahaca</p>
-
-                <P>Subtotal</P>
-
-                <p>$7200</p>
-
-            </article>
-
-        </div>
-
-        <div class="Confirmacion">
-
-            <h3>Agregar</h3>
-
-        </div>
+            <div class="article">
+        
+                <article class="articulo-producto">
+        
+                    <img src="\images\producto\pizza.png" alt="Imagen de pizza">
+        
+                    <h3>Caprese 8 Pociones</h3>
+        
+                    <p>Muzzarrella - Tomates Frescos - Albahaca - Aceite de Albahaca</p>
+        
+                    <P>Subtotal</P>
+        
+                    <p>$7200</p>
+        
+                </article>
+        
+            </div>
+        
+            <div class="Confirmacion">
+        
+                <h3>Agregar</h3>
+        
+            </div>
+        
+        </main>
 
     </main>
 
@@ -67,39 +75,42 @@
 
             <ul>
 
-                    <div class="conteiner-phone">
-                        <i class="fa-solid fa-phone"></i> <a href="tel">+54 9 388 4636451</a>
-                    </div>
+                <div class="conteiner-phone">
+                    <i class="fa-solid fa-phone"></i>
+                    <a href="tel">+54 9 388 4636451</a>
+                </div>
 
-                    <h2 class="direction-f">Direccion</h2>
+                <h2 class="direction-f">Direccion</h2>
 
-                    <div class="conteiner-location">
-                        <i class="fa-solid fa-location-dot"></i>
-                        <h3>AV. Cabildo 230 (c.a.b.a)</h3>
-                    </div>
+                <div class="conteiner-location">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <h3>AV. Cabildo 230 (c.a.b.a)</h3>
+                </div>
 
-                    <h2 class="Redes">Nuestras Redes</h2>
+                <h2 class="Redes">Nuestras Redes</h2>
 
-                    <div class="conteiner-iconos">
-                        <a href=""><i class="fa-brands fa-facebook face"></i></a>
-                        <a href=""><i class="fa-brands fa-instagram insta"></i></a>
-                        <a href=""><i class="fa-brands fa-square-pinterest pint"></i></a>
-                        <a href=""><i class="fa-brands fa-youtube yutub"></i></a>
-                        <a href=""><i class="fa-brands fa-square-whatsapp whats"></i></a>
+                <div class="conteiner-iconos">
+                    <a href="http://www.facebook.com.ar"><img src="/design/icons/face.png" alt="Facebook"></a>
+                    <a href="http://www.instagram.com.ar"><img src="/design/icons/insta.png" alt="Instagram"></a>
+                    <a href="http://www.pinteres.com.ar"><img src="/design/icons/pint.png" alt="Pinteres"></a>
+                    <a href="http://www.youtube.com.ar"><img src="/design/icons/youtu.png" alt="Youtube"></a>
+                    <a href="http://www.whatsapp.com.ar"><img src="/design/icons/what.png" alt="whatsapp"></a>
 
-                    </div>
 
-                    <div class="contenedor-copy">
-                        <h2 class="sobre-nos">Sobre Nosotros</h2>
-                        <p>copyrigth 2023 |Todos los Derechos Reservados |Desarrollado por grupo 10</p>
-                    </div>
+
+                </div>
+
+                <div class="contenedor-copy">
+                    <h2 class="sobre-nos">Sobre Nosotros</h2>
+                    <p>copyrigth 2023 |Todos los Derechos Reservados |Desarrollado por grupo 10</p>
+                </div>
 
             </ul>
 
         </nav>
 
-
     </footer>
 </body>
 
 </html>
+
