--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
     <header class="headerPrincipal">
 
         
-        <a href="/"> <img src="./design/logo.png" alt="logo pizza"></a>
+        <a href="/"> <img src="./design/icons/logo.png" alt="logo pizza"></a>
         <h5>LA PIZZA QUE TE GUSTA</h5>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
@@ -83,3 +83,35 @@
 </body>
 
 </html>
+
+
+
+
+
+    <main class="main-producto">
+
+        <div class="article">
+
+            <article class="articulo-producto">
+
+                <img src="\images\producto\pizza.png" alt="Imagen de pizza">
+
+                <h3>Caprese 8 Pociones</h3>
+
+                <p>Muzzarrella - Tomates Frescos - Albahaca - Aceite de Albahaca</p>
+
+                <P>Subtotal</P>
+
+                <p>$7200</p>
+
+            </article>
+
+        </div>
+
+        <div class="Confirmacion">
+
+            <h3>Agregar</h3>
+
+        </div>
+
+    </main>
