--- a/views/productCart.html
+++ b/views/productCart.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
+    <title>Carrito</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 </head>
 <body>
 
@@ -32,7 +32,7 @@
 
     </header>
 
-
+<!-- NAV-BAR -->
     <main>
    <nav class="nav-bar">
         <ul class="list-bar">
@@ -44,32 +44,37 @@
             <li><a href="">Bebidas</a></li>
         </ul>
   </nav>
+  <!-- TÍTULOS -->
   <h2>Clásicas</h2>
-  <p class="">Clásicas</p>
-  <div>
+  <p class="caption">Clásicas</p>
+<!-- PRIMER DIV -->
+  <div class="first-div">
     <img src="/design/imgCarrito/image2.jpg" alt="">
-<p>Pepperoni 8P</p>
-<p>Salsa de tomate, pepperoni, mozzarella, aceituna sin carozo.</p>
-<p>$5,400,0</p>
+<p class="name-pizza">Pepperoni 8P</p>
+<p class="description">Salsa de tomate, pepperoni, mozzarella, aceituna sin carozo.</p>
+<p class="price">$5,400,0</p>
   </div>
-  <div>
+  <!-- SEGUNDO-DIV -->
+  <div class="second-div">
     <img src="/design/imgCarrito/image3.jpg" alt="">
-    <p>Margarita 6P</p>
-    <p>Salsa de tomates maduros, mozzarella, hojas frescas de albahaca.</p>
-    <p>$4,900,0</p>
+    <p class="name-pizza">Margarita 6P</p>
+    <p class="description">Salsa de tomates maduros, mozzarella, hojas frescas de albahaca.</p>
+    <p class="price">$4,900,0</p>
   </div>
-  <div>
+  <!-- TERCER-DIV -->
+  <div class="third-div">
     <img src="/design/imgCarrito/image4.jpg" alt="">
-    <p>Serranita 6P</p>
-    <p>Salsa de tomate y pimiento asado, rúcula, mozzarella, jamón serrano.</p>
-    <p>$5,899,0</p>
+    <p class="name-pizza">Serranita 6P</p>
+    <p class="description">Salsa de tomate y pimiento asado, rúcula, mozzarella, jamón serrano.</p>
+    <p class="price">$5,899,0</p>
     
   </div>
-  <div>
+  <!-- ÍCONOS-DIV -->
+  <div class="icons-div">
     <i class="fa-solid fa-arrow-left"></i>
-    <p>Salir</p>
+    <p class="out">Salir</p>
     <i class="fa-solid fa-basket-shopping"></i>
-    <p>Mi pedido</p>
+    <p class="order">Mi pedido</p>
   </div>
            
 
