agrego la estructura del register y el login

--- a/views/login.html
+++ b/views/login.html
@@ -31,11 +31,22 @@
 
         </header>
 
-        <main>
+        <main class="main-login">
 
-            <h2>area a trabajar</h2>
-
-
+            <!--LOGIN-->
+    
+            <img src="/desing/Publicidad-para-pizzas.jpg" alt="">
+    
+    
+            <ol class="conteiner-red">
+    
+                <li><img src="" alt=""><a href="http://www.facebook.com">facebook</a></li>
+                <li><img src="" alt=""><a href="http://www.google.com">Google</a></li>
+                <li> <img src="" alt=""><a href="http://www.instagram.com">Instagram</a></li>
+    
+            </ol>
+    
+    
         </main>
 
 
