agrego estructura del registro

--- a/views/register.html
+++ b/views/register.html
@@ -34,11 +34,52 @@
 
     </header>
 
-    <main>
+    <main class="main-register">
 
-<h1>
-Registro Andes 
-</h1>
+        <form class="form-register">
+            <div class="conteiner-x">
+                <a href="/"><i class="fa-solid fa-xmark"></i></a>
+            </div>
+            <div class="conteiner-t-r">
+                <h4>CREA TU CUENTA</h4>
+            </div>
+            <div class="conteiner-form">
+                <div>
+                
+                    <input type="text" placeholder="Name" id="nombre">
+                </div>
+                <div>
+                    
+                    <input type="text" placeholder="Email" id="email">
+                </div>
+                
+                <div>
+                    
+                    <input type="password" placeholder="password" id="password">
+                </div>
+
+                <div>
+                    
+                    <input type="password" placeholder="confirm your password" id="confirm">
+                </div>
+                <div>
+                    
+                    <input type="number" placeholder="Numero de Tel." id="num">
+                </div>
+                <div>
+                    
+                    <input type="text" placeholder="direction" id="direction">
+                </div>
+            </div>
+            <div class="container-butons">
+                <button type="submit">Enviar</button>
+                <button type="reset">Borrar</button>
+            </div>
+        </form>
+
+            <h1>
+               Registro Andes 
+            </h1>
 
     </main>
 
