Creé la rama styles-Al para los estilos del carrito

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,10 +1,10 @@
 /* CELULAR */
 @media (max-width:360){
-    main{
+    main{ 
 
     }
 
-    /* MAIN NAV */
+    /* MAIN NAV- */
     main nav.nav-bar{
 
     }
