agrego el registro completo

--- a/views/register.html
+++ b/views/register.html
@@ -72,14 +72,12 @@
                 </div>
             </div>
             <div class="container-butons">
-                <button type="submit">Enviar</button>
-                <button type="reset">Borrar</button>
+                <button type="submit">Crear Cuenta</button>
+                
             </div>
         </form>
 
-            <h1>
-               Registro Andes 
-            </h1>
+           
 
     </main>
 
@@ -124,7 +122,9 @@
 
         </nav>
 
+
     </footer>
+    
 </body>
 
 </html>
