--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -2,20 +2,13 @@
 @media screen and (max-width: 360px) {
 
     .footer {
-
-        background: var(--rojo);
-
-        height: 189px;
-
-        display: flex;
-
-        flex-direction: column;
-
-        justify-content: center;
-
-        align-items: center;
-
-    }
+background: var(--rojo);
+height: 189px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+/* align-items: center; */
+}
 
     .footer .info-footer {}
 
